@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed build problem of PHP/Mapscript when php is compiled with gd as
+  a shared extension (#3117)
+
 - Improve safety of srcx/y checks in nearest neighbour raster resampler (#3120)
 
 - Added support for 4d geometry types and oci bind variables for Oracle (#3107)
